<resources>
    <string name="app_name">Uber_SafeRide</string>

    <!--    Titulos de Telas: -->
    <string name="appTituloMain"> INICIE A SUA JORNADA SEGURA </string>
    <string name="appTituloLogin"> Login</string>
    <string name="appTituloCadastro">Cadastrar</string>
    <string name="appTituloModificarFoto">Segurança começa com reconhecimento!</string>
    <string name="appTituloAtividade">Ops! Você ainda não possui um histórico de viagens.</string>

    <!--    SubTitulos de Telas: -->
    <string name="appDadosCadastrais"> Dados Cadastrais </string>
    <string name="appMaisopcoes"> Mais Opções </string>


    <!--Textos De Botões-->
    <string name="app_btnComecar">Começar</string>
    <string name="app_btnLogin">Vamos lá!</string>
    <string name="app_btnCadastrar_se">Cadastrar-se</string>
    <string name="app_btnIniciar">Iniciar</string>
    <string name="app_btnVoltar">Voltar</string>
    <string name="app_btnEditar">Editar</string>
    <string name="app_btnSalvar">Salvar</string>
    <string name="app_btnSair">       Sair</string>
    <string name="app_btnDelConta">Deletar Conta</string>
    <string name="app_btnSim">Sim</string>
    <string name="app_btnNao">Não</string>

    <!-- TextBox-->
    <string name="app_hint_email">E-mail:</string>
    <string name="app_hint_senha">Senha:</string>
    <string name="app_hint_dataNasci">Data de Nascimento:</string>
    <string name="app_hint_CPF">CPF:</string>
    <string name="app_hint_telefone">Telefone:</string>
    <string name="app_hint_nome">Nome:</string>
    <string name="app_hit_escolherPartida">Escolher pronto de partida</string>
    <string name ="app_hit_destino">Informe o destino...</string>

    <!--Linha de textos -->
    <string name="app_TxtCriarConta">Ainda não tem uma conta? Crie uma agora!</string>
    <string name="app_TxtLoginConta">Já tem uma conta?Entrar</string>
    <string name="app_TxtPerfil">Perfil</string>
    <string name="app_TextAtividade">Atividade</string>
    <string name="app_TextHome">Home</string>
    <string name ="app_TextGaleria">Galeria</string>
    <string name="app_TextCamera">Câmera</string>






</resources>