<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IniciarViagem">

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/containerIniciaViagem">

        <ImageView
            android:id="@+id/imageBackgroundTelaInicio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/img_backgroud_tela_inicio" />

    </FrameLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnComecar2"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/button_background"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/app_btnIniciar"
        android:textColor="@color/Branco"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerIniciaViagem"
        app:layout_constraintVertical_bias="0.60"
        app:layout_goneMarginEnd="20dp" />

    <View
        android:id="@+id/containerIniciaViagem"
        android:layout_width="0dp"
        android:layout_height="270dp"
        android:background="@drawable/container_iniciar_viagem_topo"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etPartida"
        android:layout_width="291dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edittext_background"
        android:clickable="true"
        android:elevation="4dp"
        android:focusable="true"
        android:fontFamily="@font/roboto"
        android:hint="@string/app_hit_escolherPartida"
        android:inputType="text"
        android:padding="16dp"
        android:textColor="@color/VerdeEscuroOpaco"
        android:textColorHint="@color/VerdeEscuroOpaco"
        app:layout_constraintBottom_toBottomOf="@+id/containerIniciaViagem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/containerIniciaViagem"
        app:layout_constraintVertical_bias="0.3"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/etDestino"
        android:layout_width="291dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edittext_background"
        android:clickable="true"
        android:elevation="4dp"
        android:focusable="true"
        android:fontFamily="@font/roboto"
        android:hint="@string/app_hit_destino"
        android:inputType="text"
        android:padding="16dp"
        android:textColor="@color/VerdeEscuroOpaco"
        android:textColorHint="@color/VerdeEscuroOpaco"
        app:layout_constraintBottom_toBottomOf="@+id/containerIniciaViagem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/containerIniciaViagem"
        app:layout_constraintVertical_bias="0.6"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/toobar"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="5dp"

        android:layout_marginEnd="5dp"
        android:background="@drawable/container_toobar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imgPerfil"
        android:layout_width="37dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/toobar"
        app:layout_constraintEnd_toEndOf="@+id/toobar"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="@+id/toobar"
        app:layout_constraintTop_toTopOf="@+id/toobar"
        app:srcCompat="@drawable/backgroud_image" />

    <TextView
        android:id="@+id/textPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:text="@string/app_TxtPerfil"
        android:textColor="@color/BrancoOpaco"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/toobar"
        app:layout_constraintEnd_toEndOf="@+id/toobar"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toStartOf="@+id/toobar"
        app:layout_constraintTop_toBottomOf="@+id/imgPerfil"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textAtividade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:text="@string/app_TextAtividade"
        android:textColor="@color/BrancoOpaco"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/toobar"
        app:layout_constraintEnd_toEndOf="@+id/toobar"
        app:layout_constraintStart_toStartOf="@+id/toobar"
        app:layout_constraintTop_toBottomOf="@+id/imgHistorico"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:text="@string/app_TextHome"
        android:textColor="@color/BrancoOpaco"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/toobar"
        app:layout_constraintEnd_toEndOf="@+id/toobar"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toStartOf="@+id/toobar"
        app:layout_constraintTop_toBottomOf="@+id/imgHome"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imgHistorico"
        android:layout_width="37dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/toobar"
        app:layout_constraintEnd_toEndOf="@+id/toobar"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="@+id/toobar"
        app:layout_constraintTop_toTopOf="@+id/toobar"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/icons_historico_de_atividades" />

    <ImageView
        android:id="@+id/imgHome"
        android:layout_width="37dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/toobar"
        app:layout_constraintEnd_toEndOf="@+id/toobar"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@+id/toobar"
        app:layout_constraintTop_toTopOf="@+id/toobar"
        app:srcCompat="@drawable/icon_home" />


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="51dp"
        android:layout_height="81dp"
        android:layout_marginBottom="68dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/containerIniciaViagem"
        app:layout_constraintEnd_toEndOf="@+id/containerIniciaViagem"
        app:layout_constraintHorizontal_bias="0.013"
        app:layout_constraintStart_toStartOf="@+id/containerIniciaViagem"
        app:layout_constraintTop_toTopOf="@id/containerIniciaViagem"
        app:layout_constraintVertical_bias="0.72"
        app:srcCompat="@drawable/icon_rota" />


</androidx.constraintlayout.widget.ConstraintLayout>